Avoid text overflow on miniboard name

--- a/app/assets/stylesheets/positions.scss
+++ b/app/assets/stylesheets/positions.scss
@@ -1,3 +1,4 @@
+@import "bourbon";
 @import "_variables";
 
 
@@ -45,6 +46,11 @@
         text-decoration: underline;
       }
 
+    }
+
+    .position-name {
+      line-height: 22px;
+      @include ellipsis(185px);
     }
   }
 
